--- a/home.html
+++ b/home.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Intellect BookStore</title>
+	<meta charset="utf-8">
+	<title>Intellect Book store</title>
 </head>
 <body>
 
