--- a/home.html
+++ b/home.html
@@ -3,8 +3,23 @@
 <head>
 	<meta charset="utf-8">
 	<title>Intellect Book store</title>
+	<link rel="stylesheet" type="text/css" href="ibs_style.css">
 </head>
 <body>
-
+<header >
+	<img src="ibs_header.png" alt="">
+</header>
+<nav>
+	<a href="home.html">Home</a>
+</nav>
+<div id="search_bar">
+	<input type="text" name="Search" id="Search_input"><button type="button">Search</button>
+</div>
+<main>
+	
+</main>
 </body>
+<footer>
+	<p>&regmohamadabdelhady</p>
+</footer>
 </html>
