--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Intellect Book store</title>
 	<link rel="stylesheet" type="text/css" href="ibs_style.css">
+	<link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <header >
@@ -13,7 +14,7 @@
 	<a href="home.html">Home</a>
 </nav>
 <div id="search_bar">
-	<input type="text" name="Search" id="Search_input"><button type="button">Search</button>
+	<input type="text" name="Search" id="Search_input"><button type="button" id="search_button">Search</button>
 </div>
 <main>
 	
