--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
 	<a href="home.html">Home</a>
 </nav>
 <div id="search_bar">
-	<input type="text" name="Search" id="Search_input"><button type="button" id="search_button">Search</button>
+	<button type="button" id="search_button" id="search_button">Search</button><input type="text" name="Search" id="search_input">
 </div>
 <main>
 	
