--- a/home.html
+++ b/home.html
@@ -11,7 +11,23 @@
 	<img src="ibs_header.png" alt="">
 </header>
 <nav>
+	<div class="nav_items">
 	<a href="home.html">Home</a>
+	
+<div class="dropdown">
+	<button class="dropdown_button">Categories</button>
+
+	<div class="dropdown_menu">
+		<a href="#">Classics</a>
+		<a href="#">Fantasy</a>
+		<a href="#">Mystery</a>
+		<a href="#">Horror</a>
+		<a href="#">Science</a>
+		<a href="#">Science Fiction</a>
+		<a href="#">History</a>
+	</div>
+</div>
+</div>
 </nav>
 <div id="search_bar">
 	<button type="button" id="search_button" id="search_button">Search</button><input type="text" name="Search" id="search_input">
