--- a/Fantasy.html
+++ b/Fantasy.html
@@ -19,13 +19,13 @@
 	<button class="dropdown_button">Categories</button>
 
 	<div class="dropdown_menu">
-		<a href="Classics.html">Classics</a>
-		<a href="Fantasy.html">Fantasy</a>
-		<a href="Mystery.html">Mystery</a>
-		<a href="Horror.html">Horror</a>
-		<a href="Science.html">Science</a>
-		<a href="Science Fiction.html">Science Fiction</a>
-		<a href="History.html">History</a>
+		<a href="#">Classics</a>
+		<a href="#">Fantasy</a>
+		<a href="#">Mystery</a>
+		<a href="#">Horror</a>
+		<a href="#">Science</a>
+		<a href="#">Science Fiction</a>
+		<a href="#">History</a>
 	</div>
 </div>
 </div>
