--- a/Mystery.html
+++ b/Mystery.html
@@ -19,13 +19,13 @@
 	<button class="dropdown_button">Categories</button>
 
 	<div class="dropdown_menu">
-		<a href="#">Classics</a>
-		<a href="#">Fantasy</a>
-		<a href="#">Mystery</a>
-		<a href="#">Horror</a>
-		<a href="#">Science</a>
-		<a href="#">Science Fiction</a>
-		<a href="#">History</a>
+		<a href="Classics.html">Classics</a>
+		<a href="Fantasy.html">Fantasy</a>
+		<a href="Mystery.html">Mystery</a>
+		<a href="Horror.html">Horror</a>
+		<a href="Computer science.html">Computer science</a>
+		<a href="Science Fiction.html">Science Fiction</a>
+		
 	</div>
 </div>
 </div>
@@ -36,7 +36,7 @@
 
 <main>
 	<div class="banner">
-	<img src="ibs_home_banner.jpg" alt="home banner">
+	<img src="ibs_Mystery_banner.jpg" alt="home banner">
 </div>
 </main>
 </body>
