--- a/home.html
+++ b/home.html
@@ -23,9 +23,9 @@
 		<a href="Fantasy.html">Fantasy</a>
 		<a href="Mystery.html">Mystery</a>
 		<a href="Horror.html">Horror</a>
-		<a href="Science.html">Science</a>
+		<a href="Computer science.html">Computer science</a>
 		<a href="Science Fiction.html">Science Fiction</a>
-		<a href="History.html">History</a>
+		
 	</div>
 </div>
 </div>
