--- a/Science Fiction.html
+++ b/Science Fiction.html
@@ -31,6 +31,8 @@
 </nav>
 <div id="search_bar">
 	<button type="button" id="search_button" id="search_button">Search</button><input type="text" name="Search" id="search_input">
+	<input type="text" name="username" id="usernameinput" placeholder="User name"><input type="password" name="password" id="passwordinput" placeholder="Password">
+	<button type="button" id="login_button">Log In</button><button type="button" id="signup_button">Sign Up</button>
 </div>
 
 <main>
