--- a/Classics.html
+++ b/Classics.html
@@ -6,6 +6,7 @@
 	<title>Intellect Book store</title>
 	<link rel="stylesheet" type="text/css" href="ibs_style.css">
 	<link rel="shortcut icon" href="favicon.ico">
+	<script type="text/javascript" src="ibs_script.js"></script>
 </head>
 <body>
 <header >
@@ -33,7 +34,7 @@
 <div id="search_bar">
 	<button type="button" id="search_button" id="search_button">Search</button><input type="text" name="Search" id="search_input">
 	<input type="text" name="username" id="usernameinput" placeholder="User name"><input type="password" name="password" id="passwordinput" placeholder="Password">
-	<button type="button" id="login_button">Log In</button><button type="button" id="signup_button">Sign Up</button>
+	<button type="button" id="login_button">Log In</button><button type="button" id="signup_button" onclick="document.location='signup.html'">Sign Up</button>
 </div>
 
 <main>
