--- a/signup.html
+++ b/signup.html
@@ -36,10 +36,11 @@
 	<button type="button" id="login_button">Log In</button><button type="button" id="signup_button">Sign Up</button>
 </div>
 
-<main>
+<main style="background-image: url('signupBanner.jpg');background-repeat: none;background-size: cover;">
 	
 <div class="sinupform">
 	<form>
+		
 		<label for="uname">User name</label><br><input type="text" name="unameinput"><br><br>
 		<label for="email">Email</label><br><input type="text" name="emailinput"><br><br>
 		<label for="password">Password</label><br><input type="password" name="passwordinput"><br><br>
