--- a/signup.html
+++ b/signup.html
@@ -45,6 +45,8 @@
 		<label for="email">Email</label><br><input type="text" name="emailinput"><br><br>
 		<label for="password">Password</label><br><input type="password" name="passwordinput"><br><br>
 		<label for="conpassword">Confirm password</label><br><input type="password" name="comfirminput"><br><br>
+		<label for="phone">Phone number</label><br><input type="text" name="phonenum"><br><br>
+		<label for="adress">Adress</label><br><input type="text" name="useradress"><br><br>
 		<button type="button" id="signup_button2">Sign up</button>
 	</form>
 </div>
