--- a/home.html
+++ b/home.html
@@ -56,6 +56,6 @@ while ($row=mysqli_fetch_query($img_query)) {
 </main>
 </body>
 <footer>
-	<p>&regmohamadabdelhady</p>
+	<p>&regmohamadabdelhady 2020</p>
 </footer>
 </html>
