--- a/home.html
+++ b/home.html
@@ -1,61 +1,31 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Intellect Book store</title>
-	<link rel="stylesheet" type="text/css" href="ibs_style.css">
-	<link rel="shortcut icon" href="favicon.ico">
+	<title>Intellect bookstore</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<header >
-	<img src="ibs_header.png" alt="">
+<header>
+	<div class="logo">
+		<img src="bookstore_logo.png" alt="Intellect logo">
+	</div>
+	<div class="search">
+
+		<input type="text" name="search_input">
+		<button type="button" id="search_button">Search</button>
+	</div>
+	<div class="log_in">
+		
+		<a href="">Log in</a><br><br>
+		<a href="">Create account</a>
+	</div>
 </header>
 <nav>
-	<div class="nav_items">
-	<a href="home.html">Home</a>
-	
-<div class="dropdown">
-	<button class="dropdown_button">Categories</button>
-
-	<div class="dropdown_menu">
-		<a href="Classics.html">Classics</a>
-		<a href="Fantasy.html">Fantasy</a>
-		<a href="Mystery.html">Mystery</a>
-		<a href="Horror.html">Horror</a>
-		<a href="Computer science.html">Computer science</a>
-		<a href="Science Fiction.html">Science Fiction</a>
-		
+	<div class="items">
+		Categories
 	</div>
-</div>
-</div>
+	<hr>
 </nav>
-<div id="search_bar">
-	<button type="button" id="search_button" id="search_button">Search</button><input type="text" name="Search" id="search_input">
-	<input type="text" name="username" id="usernameinput" placeholder="User name"><input type="password" name="password" id="passwordinput" placeholder="Password">
-	<button type="button" id="login_button">Log In</button><button type="button" id="signup_button" onclick="document.location='signup.html'">Sign Up</button>
-</div>
-
-<main>
-	<div class="banner">
-	<img src="ibs_home_banner.jpg" alt="home banner">
-</div>
-<?php
-include"connection.php"
-$ibsdb=mysai_connect($host,$uname,$pwd,$db_name) or die("error".mysqli_error());
-$img_query=myqli_query($ibsdb,"SELECT name,img_dir FROM books_data");
-while ($row=mysqli_fetch_query($img_query)) {
-	$img_name=$row['name'];
-	$img_src=$row['img_dir'];
-
-}
-?>
-<div class="img_table">
-	<img src="<?php echo $img_src; ?>" alt="" title="img/<?php $img_name ?>" class="img_res" />
-</div>
-</main>
 </body>
-<footer>
-	<p>&regmohamadabdelhady 2020</p>
-</footer>
 </html>
