--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 <body>
 <header>
 	<div class="logo">
-		<img src="bookstore_logo.png" alt="Intellect logo">
+		<a href="home.html"><img src="bookstore_logo.png" alt="Intellect logo"></a>
 	</div>
 	<div class="search">
 
@@ -27,5 +27,11 @@
 	</div>
 	<hr>
 </nav>
+<main>
+	
+</main>
 </body>
+<footer>
+	<p>&regmohamadabdelhady 2020</p>
+</footer>
 </html>
