--- a/home.html
+++ b/home.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <header>
+	<div class="menu_button">
+		<input type="image"  src="open-menu.png">
+	</div>
 	<div class="logo">
 		<a href="home.html"><img src="bookstore_logo.png" alt="Intellect logo"></a>
 	</div>
@@ -17,15 +20,12 @@
 	</div>
 	<div class="log_in">
 		
-		<a href="">Log in</a><br><br>
+		<a href="">Log in</a>
 		<a href="">Create account</a>
 	</div>
 </header>
 <nav>
-	<div class="items">
-		Categories
-	</div>
-	<hr>
+	
 </nav>
 <main>
 	
