--- a/home.html
+++ b/home.html
@@ -4,12 +4,22 @@
 	<meta charset="utf-8">
 	<title>Intellect bookstore</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 <header>
-	<div class="menu_button">
-		<input type="image"  src="open-menu.png">
+	<div class="menu">
+		<input type="image"  src="open-menu.png" class="menu_button">
+	<div class="dropdown_menu" id="mymenue">
+		
+		<p>Categories</p>
+		<hr style="color: white; width: 90%;">
+		<a href="">FAQ</a>
+		<hr style="color: white;width: 90%;">
+		<a href="">About us</a>
+		
 	</div>
+</div>
 	<div class="logo">
 		<a href="home.html"><img src="bookstore_logo.png" alt="Intellect logo"></a>
 	</div>
@@ -19,9 +29,9 @@
 		<button type="button" id="search_button">Search</button>
 	</div>
 	<div class="log_in">
-		
-		<a href="">Log in</a>
-		<a href="">Create account</a>
+		<a href=""><img src="login_icon.png" style="width: 30px;height: 30px;"></a>
+
+		<a href=""><img src="account_icon.png" style="width: 30px;height: 30px;"></a>
 	</div>
 </header>
 <nav>
