--- a/home.html
+++ b/home.html
@@ -29,14 +29,11 @@
 		<button type="button" id="search_button">Search</button>
 	</div>
 	<div class="log_in">
-		<a href=""><img src="login_icon.png" style="width: 30px;height: 30px;"></a>
-
-		<a href=""><img src="account_icon.png" style="width: 30px;height: 30px;"></a>
+		<a href=""><img src="login_icon.png" style="width: 30px;height: 30px;" class="imglog"></a>
+		<a href=""><img src="account_icon.png" style="width: 30px;height: 30px;" id="crimg"></a>
 	</div>
-</header>
-<nav>
 	
-</nav>
+</header>
 <main>
 	
 </main>
