--- a/home.html
+++ b/home.html
@@ -30,7 +30,9 @@
 	</div>
 	<div class="log_in">
 		<a href=""><img src="login_icon.png" style="width: 30px;height: 30px;" class="imglog"></a>
-		<a href=""><img src="account_icon.png" style="width: 30px;height: 30px;" id="crimg"></a>
+		<p class="logp">Log in</p>
+		<a href=""><img src="account_icon.png" style="width: 30px;height: 30px;" class="crimg"></a>
+		<p class="crp">New account</p>
 	</div>
 	
 </header>
