--- a/home.html
+++ b/home.html
@@ -4,19 +4,18 @@
 	<meta charset="utf-8">
 	<title>Intellect bookstore</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 <header>
 	<div class="menu">
 		<input type="image"  src="open-menu.png" class="menu_button">
-	<div class="dropdown_menu" id="mymenue">
+	<div class="dropdown_menu">
 		
 		<p>Categories</p>
-		<hr style="color: white; width: 90%;">
-		<a href="">FAQ</a>
-		<hr style="color: white;width: 90%;">
+		<hr>
 		<a href="">About us</a>
+		<hr>
+		<a href="">FAQ</a>
 		
 	</div>
 </div>
