--- a/home.html
+++ b/home.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Intellect bookstore</title>
+	<title></title>
+	<!-- CSS only -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<header>
-	<div class="menu">
-		<input type="image"  src="open-menu.png" class="menu_button">
-	<div class="dropdown_menu">
-		
-		<p>Categories</p>
-		<hr>
-		<a href="">About us</a>
-		<hr>
-		<a href="">FAQ</a>
-		
-	</div>
-</div>
-	<div class="logo">
-		<a href="home.html"><img src="bookstore_logo.png" alt="Intellect logo"></a>
-	</div>
-	<div class="search">
-
-		<input type="text" name="search_input">
-		<button type="button" id="search_button">Search</button>
-	</div>
-	<div class="log_in">
-		<a href=""><img src="login_icon.png" style="width: 30px;height: 30px;" class="imglog"></a>
-		<p class="logp">Log in</p>
-		<a href=""><img src="account_icon.png" style="width: 30px;height: 30px;" class="crimg"></a>
-		<p class="crp">New account</p>
-	</div>
-	
+  <header>
+<nav class="navbar navbar-expand-lg navbar-light ">
+ <a href="home.html" class="navbar-brand">
+   <div id="logo-img" alt="intellect bookstore"></div></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">About us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Pricing</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Book genres
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="#">classics</a>
+          <a class="dropdown-item" href="#">science fiction</a>
+          <a class="dropdown-item" href="#">fantsy</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
 </header>
-<main>
-	
-</main>
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
-<footer>
-	<p>&regmohamadabdelhady 2020</p>
-</footer>
 </html>
