--- a/home.html
+++ b/home.html
@@ -18,12 +18,8 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">About us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
+      
+     
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Book genres
@@ -34,7 +30,14 @@
           <a class="dropdown-item" href="#">fantsy</a>
         </div>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About us</a>
+      </li>
     </ul>
+    <form class="form-inline" id="Search-form">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-btn">Search</button>
+  </form>
   </div>
 </nav>
 </header>
