--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
       </li>
     </ul>
     <form class="form-inline" id="Search-form">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search-input" >
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-btn">Search</button>
   </form>
   </div>
