--- a/home.html
+++ b/home.html
@@ -13,6 +13,7 @@
 <nav class="navbar navbar-expand-lg navbar-light ">
  <a href="home.html" class="navbar-brand">
    <div id="logo-img" alt="intellect bookstore"></div></a>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -28,6 +29,11 @@
           <a class="dropdown-item" href="#">classics</a>
           <a class="dropdown-item" href="#">science fiction</a>
           <a class="dropdown-item" href="#">fantsy</a>
+          <a class="dropdown-item" href="#">science</a>
+          <a class="dropdown-item" href="#">history</a>
+          <a class="dropdown-item" href="#">graphic novel</a>
+          <a class="dropdown-item" href="#">crime</a>
+          <a class="dropdown-item" href="#">horror</a>
         </div>
       </li>
       <li class="nav-item">
@@ -38,12 +44,107 @@
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search-input" >
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-btn">Search</button>
   </form>
+  <ul class="navbar-nav">
+      
+     
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLinkuser" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          user
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLinkuser">
+          <a class="dropdown-item" href="#">log in</a>
+          <a class="dropdown-item" href="#">create new account</a>
+        </div>
+      </li>
   </div>
+
 </nav>
 </header>
+<main></main>
 <!-- JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
+<footer class="page-footer font-small  pt-4">
+
+  <!-- Footer Links -->
+  <div class="container-fluid text-center text-md-left">
+
+    <!-- Grid row -->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-6 mt-md-0 mt-3">
+
+        <!-- Content -->
+        <h5 class="text-uppercase">Website Content</h5>
+        <a href="">About us</a>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none pb-3">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3">
+
+        <!-- Links -->
+        <h5 class="text-uppercase">Books genres</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">classics</a>
+          </li>
+          <li>
+            <a href="#!">science fiction</a>
+          </li>
+          <li>
+            <a href="#!">fantsy</a>
+          </li>
+          <li>
+            <a href="#!">science</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3">
+
+        <!-- Links -->
+        <h5 class="text-uppercase">Books genres</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">history</a>
+          </li>
+          <li>
+            <a href="#!">graphic novel</a>
+          </li>
+          <li>
+            <a href="#!">crime</a>
+          </li>
+          <li>
+            <a href="#!">horror</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3" id="footer-cop" style="background-color:#70777a;">© 2020 Copyright:
+    <a href="#"> Intellect Bookstore</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
 </html>
