added bootstrab spacing to the serch bar

--- a/home.html
+++ b/home.html
@@ -40,9 +40,9 @@
         <a class="nav-link" href="#">About us</a>
       </li>
     </ul>
-    <form class="form-inline" id="Search-form">
+    <form class="form-inline mx-lg-3" id="Search-form">
     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search-input" >
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-btn">Search</button>
+    <button class="btn bt3-outline-success my-2 my-sm-0" type="submit" id="search-btn">Search</button>
   </form>
   <ul class="navbar-nav">
       
