added shopping bag icon

--- a/home.html
+++ b/home.html
@@ -58,6 +58,10 @@
           <a class="dropdown-item" href="#">create new account</a>
         </div>
       </li>
+      <div class="mx-lg-5">
+      <input type="image" name="shopping bag" src="shopping-bag.png" id="shopping-bag-icon" >
+      <p>shoping bag is empty</p>
+  </div>
   </div>
 
 </nav>
@@ -107,17 +111,6 @@
           <li>
             <a href="#!">science</a>
           </li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-md-3 mb-md-0 mb-3">
-
-        <!-- Links -->
-        <br>
-        <ul class="list-unstyled">
           <li>
             <a href="#!">history</a>
           </li>
@@ -133,8 +126,7 @@
         </ul>
 
       </div>
-      <!-- Grid column -->
-
+      
     </div>
     <!-- Grid row -->
 
