added about us content

--- a/about.html
+++ b/about.html
@@ -65,7 +65,19 @@
 
 </nav>
 </header>
-<main></main>
+<main>
+  
+  <div class="container mt-4">
+    <h2 class="display-4">A word about us</h2>
+    <p class="lead">We are an online book store called "Intellect" that seeks to provide its user with frindly user website and a reliable and fast delivery service.</p>
+    <hr>
+  </div>
+
+  <div class="container mt-4">
+    <h2 class="display-4">Contact us</h2>
+    <p class="lead">telephone: +20placeholder<br>email: ibs-palceholder@mail.com</p>
+  </div>
+</main>
 <!-- JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
