--- a/log-in.html
+++ b/log-in.html
@@ -52,8 +52,8 @@
           user
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLinkuser">
-          <a class="dropdown-item" href="#">log in</a>
-          <a class="dropdown-item" href="#">create new account</a>
+          <a class="dropdown-item" href="log-in.html">log in</a>
+          <a class="dropdown-item" href="new_account.html">create new account</a>
         </div>
       </li>
       <div class="mx-lg-5">
@@ -67,7 +67,7 @@
 </header>
 <main style="background-image: url('log-in-banner.jpg');background-repeat: none;background-size: cover; opacity: 0.5">
 	<br>
-	<div>
+	<div >
 		<form class="card col-lg-5 col-md-4 col-sm-5 col-xl-5 py-3 px-3 m-5  mx-auto " id="log-in-form">
 			<div class="form-group justify-content-center">
 				<label for="user-emil">Email</label>
@@ -78,6 +78,7 @@
 				<label for="user-password">Password</label>
 				<input type="password" class="form-control" id="user-password" placeholder="Enter password">
 			</div>
+			
 			<div class="form-check">
    			 	<input type="checkbox" class="form-check-input" id="check-remeber-me">
    				<label class="form-check-label" for="check-remeber-me">Remember me</label>
@@ -85,7 +86,9 @@
  			<a href="">did you forgot your password?</a>
 			<button type="submit" class="btn btn-primary">Log in</button>
 		</form>
+
 	</div>
+	<br>
 </main>
 <!-- JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
