--- a/graphic novel.html
+++ b/graphic novel.html
@@ -52,8 +52,8 @@
           user
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLinkuser">
-          <a class="dropdown-item" href="#">log in</a>
-          <a class="dropdown-item" href="#">create new account</a>
+          <a class="dropdown-item" href="log-in.html">log in</a>
+          <a class="dropdown-item" href="new_account.html">create new account</a>
         </div>
       </li>
       <div class="mx-lg-5">
