--- a/home.html
+++ b/home.html
@@ -70,6 +70,9 @@
 		<h1 class="display-4">Wellcome to intellect book store</h1>
 		<p class="lead">An online book store that will satisfy all your book related needs.</p>
 	</div>
+	<div class="container col-lg-10">
+		
+	</div>
 </main>
 <!-- JS, Popper.js, and jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
